tests/ui/static/static-region-bound.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/static-region-bound.rs:10:14
   |
LL |     let x = &id(3);
   |              ^^^^^ creates a temporary value which is freed while still in use
LL |     f(x);
   |     ---- argument requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement
   |
note: requirement that the value outlives `'static` introduced here
  --> $DIR/static-region-bound.rs:3:8
   |
LL | fn f<T:'static>(_: T) {}
   |        ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
